@@ -708,6 +708,11 @@ include => demo
 ;exten => 6600,hint,park:701@parkedcalls
 ;exten => 6600,1,noop
 ;
+; You can also monitor the status of a queue by providing a hint for a
+; particular queue name.
+;exten => 8502,hint,Queue:markq
+;exten => 8502,1,Queue(markq)
+;
 ; Some other handy things are an extension for checking voicemail via
 ; voicemailmain
 ;
